--- a/VS-QuickNavigation/VS-QuickNavigation2022.csproj
+++ b/VS-QuickNavigation/VS-QuickNavigation2022.csproj
@@ -272,7 +272,8 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <PropertyGroup>
-    <PreBuildEvent>powershell -Command "(gc '$(ProjectDir)source.extension.vsixmanifest') -replace '\[15\.0,17\.0\)', '[17.0,)' | Out-File -encoding ASCII '$(ProjectDir)source.extension.vsixmanifest'"</PreBuildEvent>
+    <PreBuildEvent>powershell -Command "(gc '$(ProjectDir)source.extension.vsixmanifest') -replace '\[15\.0,17\.0\)', '[17.0,)' | Out-File -encoding ASCII '$(ProjectDir)source.extension.vsixmanifest'"
+powershell -Command "(gc '$(ProjectDir)source.extension.vsixmanifest') -replace '\&lt;ProductArchitecture\&gt;x86\&lt;\/ProductArchitecture\&gt;', '&lt;ProductArchitecture&gt;amd64&lt;/ProductArchitecture&gt;' | Out-File -encoding ASCII '$(ProjectDir)source.extension.vsixmanifest'"</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>
